# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  compile.bat  main.cpp
AMQP/: CMakeLists.txt
AMQP/include/: Channel.hpp
AMQP/src/: Channel.cpp
Abstractions/: CMakeLists.txt
Abstractions/include/Abstractions/: DataTypes.hpp  Environment.hpp  Logger.hpp  Utils.hpp
Abstractions/src/: Environment.cpp  LogCategory.cpp  Logger.cpp
Engine/: CMakeLists.txt  DataTypes.hpp  ResourceManager.cpp  ResourceManager.hpp
Engine/Core/: Display.cpp  Display.hpp
Engine/Core/Env/: Environment.cpp  Environment.hpp  LogCategory.cpp  LogCategory.hpp  Logger.cpp
Engine/GUI/: Sprite.cpp  Sprite.hpp
Engine/Graphics/: GLSLProgram.cpp  GLSLProgram.hpp  GLTexture.hpp  ImageLoader.cpp  ImageLoader.hpp  PicoPNG.cpp  PicoPNG.hpp  TextureCache.cpp  Vertex.hpp
Engine/Input/: IOManager.cpp  IOManager.hpp
Engine/include/Engine/: ResourceManager.hpp
Engine/include/Engine/GUI/: Sprite.hpp
Engine/include/Engine/Graphics/: Buffer.hpp  Camera.hpp  Descriptors.hpp  Device.hpp  FrameInfo.hpp  GLSLProgram.hpp  GLTexture.hpp  GameObject.hpp  ImageLoader.hpp  Model.hpp  Pipeline.hpp  Renderer.hpp  SimpleRenderSystem.hpp  SwapChain.hpp  TextureCache.hpp  Vertex.hpp  Window.hpp
Engine/include/Engine/Input/: IOManager.hpp  KeyboardMovementController.hpp
Engine/include/Engine/Systems/: PointLightSystem.hpp  SimpleRenderSystem.hpp
Engine/src/: ResourceManager.cpp
Engine/src/GUI/: Sprite.cpp
Engine/src/Graphics/: Buffer.cpp  Camera.cpp  Descriptors.cpp  Device.cpp  GLSLProgram.cpp  GameObject.cpp  ImageLoader.cpp  Model.cpp  PicoPNG.cpp  Pipeline.cpp  Renderer.cpp  SimpleRenderSystem.cpp  SwapChain.cpp  TextureCache.cpp  Window.cpp
Engine/src/Input/: IOManager.cpp  KeyboardMovementController.cpp
Engine/src/Systems/: PointLightSystem.cpp  SimpleRenderSystem.cpp
Game/: CMakeLists.txt  MainGame.cpp  MainGame.hpp
Game/Shaders/: ColorShading.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
Game/src/: Application.cpp  Application.hpp  MainGame.cpp  MainGame.hpp  main.cpp
Shaders/: ColorShading.frag  ColorShading.vert
cmake/sdl2/: FindSDL2_gfx.cmake  FindSDL2_net.cmake
